made a copy of index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <title>Memory Game!</title>
     <link rel="stylesheet" href="styles.css.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Memory Game!</h1>
+    <!--this is a comment-->
     <div id="game">
     </div>
     <script src="app.js.js"></script>
-  </body>
+</body>
+
 </html>
